# EM-shower-simulator-with-NN

./: .gitattributes  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  Untitled4.ipynb  requirements.txt  setup.cfg  setup.py
Dataset/Filtered_data/: README.md  analisi.C
Dataset/Geant4/: README.md  file.py  geometria.tg  simulazione.mac
EM_shower/Dataset/: analisi.C  dati_MVA.root
EM_shower/data_visualization/: README.md  esempio_sciame.wrl  geometria.wrl
EM_shower_simulator/: EM_shower_simulator.py  README.rst  __init__.py  __version__.py  class_GAN.py  class_GAN_C.py  class_GAN_D.py  config.py  constants.py  custom_minibatch.py  dataset.py  dataset_C.py  debug.py  debug_C.py  debug_and_train.py  debug_and_train_C.py  debug_and_train_D.py  generate_dataset.py  make_models.py  make_models_C.py  make_models_D.py  shower_simulator.py  train.py  train_C.py  train_GAN.py  unbiased_metrics.py
EM_shower_simulator/EM_shower_network/: example2.py  train.py
EM_shower_training/: README.md
analysis/: analysis.C  history.py
dataset/: README.rst
docs/: tutorial_doc&CI.txt
em_shower_simulator/: README.rst  __init__.py  _version.py  class_GAN.py  constants.py  dataset.py  generate_dataset.py  make_models.py  unbiased_metrics.py
jupyter and slides/: Debug_and_train_cGAN.ipynb
notebook and slides/: Debug_and_train_cGAN.ipynb  Debug_and_train_cGAN_versione_ok.ipynb
notebook\ and\ slides/: Debug_and_train_cGAN.ipynb
scripts/: simulate_EM_shower
tests/: test1.py  test_1.py  test_configuration_and_data_path.py  test_module_EM_shower_simulation.py
(+89 files in other folders)
