[metadata]
name = EM shower simulator
version = attr: EM_shower_simulator.__version__
author = Dario Cafasso, Daniele Passaro
author_email = cafasso.dario@gmail.com, danielepassaro2@live.it
description = Electromagnetic shower simulator with a neural network
url = https://em-shower-simulator-with-nn.readthedocs.io/en/latest/?badge=latest
urls =
  Source = https://github.com/Dario-Caf/EM-shower-simulator-with-NN
	Documentation = https://em-shower-simulator-with-nn.readthedocs.io/en/latest/?badge=latest
platforms =
classifiers =
  License :: OSI Approved :: GPL v3.0
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: C++
  Intended Audience :: Science/Research
  Topic :: Scientific computation
  Development Status :: Beta
license = GPL v3.0
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
python_requires = >= 3.7
include_package_data = True

[options.entry_points]
console_scripts =
  simulate-EM-shower = EM_shower_simulator.shower_simulator:cli

[versioneer]
VCS = git
style = pep440
versionfile_source = EM_shower_simulator/_version.py
versionfile_build = EM_shower_simulator/_version.py
tag_prefix =
parentdir_prefix =
